--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<a href="#/" class="selected">All</a>
 						</li>
 						<li>
-						<a href="#/active">Active</a>
+						<a href="#/active"><strong>Active</strong></a>
 						</li>
 						<li>
 						<a href="#/completed">Completed</a>
